bootstrap/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csdp-september-argocd
  namespace: csdp-september
spec:
  ingressClassName: nginx
  rules:
  - host: rozario-demo.sa.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /argocd
        pathType: Prefix
